[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "careless-py"
version = "1.0.1"
authors = [
  { name="Cameron Lyons", email="cameron.lyons2@gmail.com" },
]
description = "Python version of R careless package"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "numpy>=1.20.0",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.optional-dependencies]
full = [
    "scipy>=1.7.0",
]
dev = [
    "scipy>=1.7.0",
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "mypy>=1.0.0",
    "ruff>=0.1.0",
    "pylint>=3.0.0",
    "bandit>=1.7.0",
    "pip-audit>=2.0.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[project.urls]
"Homepage" = "https://github.com/Cameron-Lyons/careless-py"
"Bug Tracker" = "https://github.com/Cameron-Lyons/careless-py/issues"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py", "unit.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short -Werror"
filterwarnings = ["error"]

[tool.coverage.run]
source = ["src/careless"]
branch = true
omit = ["tests/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
]
show_missing = true

[tool.ruff]
target-version = "py314"
line-length = 100
src = ["src"]

[tool.ruff.lint]
select = [
    "E",
    "F",
    "W",
    "I",
    "UP",
    "B",
    "SIM",
    "TCH",
]
ignore = [
    "E501",
]

[tool.ruff.lint.isort]
known-first-party = ["careless"]

[tool.mypy]
python_version = "3.14"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_untyped_calls = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
extra_checks = true

[tool.pylint.messages_control]
disable = [
    "C0114",
    "C0115",
    "C0116",
    "R0913",
    "R0914",
]

[tool.pylint.format]
max-line-length = 100

[tool.bandit]
exclude_dirs = ["tests"]
skips = ["B101"]